Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117888

Wide camera is not supported?

    XMLWordPrintable

Details

    • Android, iOS/tvOS/watchOS
    • 2024wk4Xs3FOQtforAndroid

    Description

      New mobile phone cameras have wide camera option with 0.5 zoom.

      Is this supported?

      User sent modified declarative-camera example with following change:

      replace in file ZoomControl.qml at line 27:
      // old:
      // onPositionChanged: {
      // if (pressed) {
      // var target = initialZoom * Math.pow(5, (initialPos-mouseY)/zoomControl.height);
      // target = Math.max(1, Math.min(target, zoomControl.maximumZoom))
      // zoomControl.zoomTo(target)
      // }
      // }
      //
      // new:
      onPositionChanged: {
      if (pressed) {
      var target = initialZoom * Math.pow(5, (initialPos-mouseY)/zoomControl.height);
      // Minimum zoom factor set to 0.5:
      target = Math.max(0.5, Math.min(target, zoomControl.maximumZoom))
      zoomControl.zoomTo(target)
      zoomControl.currentZoom = target
      }
      }

      In the tests with Android 13 Samsung A52s phone the 0.5 zoom did not have wide effect. 

      Please see the example pictures attached.

      In the example the zoom factor can be dragged down to be 0.5 but this has no effect. Zoom only changes after it gets to 1.0

      Attachments

        1. Screenshot_20231006_122556.jpg
          1.17 MB
          Tero Pelkonen
        2. Screenshot_20231006_122724.jpg
          1.11 MB
          Tero Pelkonen
        3. declarative-camera.zip
          304 kB
          Tero Pelkonen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bartlomiejmoskal Bartlomiej Moskal
            tero.pelkonen Tero Pelkonen
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes