Android: Update in Camera Zoom handling

Some newer Android devices allow to set zoom below 1. That can be done
using CONTROL_ZOOM_RATIO[0] relying on CONTROL_ZOOM_RATIO_RANGE[1]
values. Both were added in API level 30.

[0]https://developer.android.com/reference/android/hardware/camera2/CaptureRequest#CONTROL_ZOOM_RATIO
[1]https://developer.android.com/reference/android/hardware/camera2/CameraCharacteristics#CONTROL_ZOOM_RATIO_RANGE

Task-number: QTBUG-117888
Change-Id: I884860276983c459c7d0c9201e0ff09e87519b53
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 695e657ce0c1d82671439e72d110cc90398b790d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a01a25b197031c93f82796c9690b7bb17752ff59)
Reviewed-by: Bartlomiej Moskal <bartlomiej.moskal@qt.io>
(cherry picked from commit 426cbd21b24e005e6915a4f1926eb9e05919e16f)